Fixed text labels and comments.

--- a/example/nadir/rad.org
+++ b/example/nadir/rad.org
@@ -8,9 +8,9 @@
 # $8 = tangent point altitude [km]
 # $9 = tangent point longitude [deg]
 # $10 = tangent point latitude [deg]
-# $11 = radiance (667.7820 cm^-1) [W/(m^2 sr cm^-1)]
-# $12 = radiance (668.5410 cm^-1) [W/(m^2 sr cm^-1)]
-# $13 = radiance (669.8110 cm^-1) [W/(m^2 sr cm^-1)]
+# $11 = brightness temperature (667.7820 cm^-1) [K]
+# $12 = brightness temperature (668.5410 cm^-1) [K]
+# $13 = brightness temperature (669.8110 cm^-1) [K]
 # $14 = transmittance (667.7820 cm^-1) [-]
 # $15 = transmittance (668.5410 cm^-1) [-]
 # $16 = transmittance (669.8110 cm^-1) [-]
